--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -59,8 +59,8 @@
 
                     <li class="sidebar-item">
                         <a href="/ProdData/Dailyreport" class="sidebar-link">
-                            <i class="lni lni-cog">
-                                <span>Daily_Report_Details</span>
+                            <i class="lni lni-bookmark-alt">
+                                <span>Daily Report Details</span>
                             </i>
                         </a>
                     </li>
