--- a/Fuji-I/Views/ProdData/ViewGrid.cshtml
+++ b/Fuji-I/Views/ProdData/ViewGrid.cshtml
@@ -202,19 +202,20 @@
                 ]
             },
             options: {
+                indexAxis: 'y',
                 scales: {
                     x: {
                         // stacked: true,
                         title: {
                             display: true,
-                            text: 'Date & Hour'
+                            text: 'Qty'
                         }
                     },
                     y: {
                         // stacked: true,
                         title: {
                             display: true,
-                            text: 'Values'
+                            text: 'FG & Hour'
                         },
                         beginAtZero: true
                     }
