--- a/Fuji-I/Views/ProdData/ViewGrid2.cshtml
+++ b/Fuji-I/Views/ProdData/ViewGrid2.cshtml
@@ -204,14 +204,14 @@
             options: {
                 scales: {
                     x: {
-                        // stacked: true,
+                        stacked: true,
                         title: {
                             display: true,
                             text: 'Date & FG Name'
                         }
                     },
                     y: {
-                        // stacked: true,
+                        stacked: true,
                         title: {
                             display: true,
                             text: 'Values'
