OEE Data _calculation

--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                     </a>
                 </li>
                     <li class="sidebar-item">
-                        <a href="/ProdData/ProdData" class="sidebar-link">
+                        <a href="/ProdData/ProdData" class="sidebar-link" style="display:none;">
                             <i class="lni lni-protection">
                                 <span>Production Details</span>
                             </i>
@@ -50,7 +50,7 @@
                     </li>
 
                     <li class="sidebar-item">
-                        <a href="/ProdData/WorkOrder" class="sidebar-link">
+                        <a href="/ProdData/WorkOrder" class="sidebar-link" style="display:none;">
                             <i class="lni lni-layout">
                                 <span>WorkOrder Details</span>
                             </i>
@@ -58,7 +58,7 @@
                     </li>
 
                     <li class="sidebar-item">
-                        <a href="/ProdData/Dailyreport" class="sidebar-link">
+                        <a href="/ProdData/Dailyreport" class="sidebar-link" style="display:none;">
                             <i class="lni lni-bookmark-alt">
                                 <span>Daily Report Details</span>
                             </i>
