online file  style and css files change to offline

--- a/Fuji-I/Views/MainPage/shiftReport.cshtml
+++ b/Fuji-I/Views/MainPage/shiftReport.cshtml
@@ -3,10 +3,12 @@
     ViewData["Title"] = "shiftReport";
 }
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>  
-
+@* <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>   *@
+<script src="~/lib/jquery/dist/chart.js"></script>
+@* <script src="~/lib/jquery/dist/chartjs-plugin-doughnutlabel-rebourne.js"></script> *@
+<script src="~/lib/jquery/dist/chartjs-plugin-doughnutlabel-rebourne.min.js"></script>
 <!-- Example using unpkg CDN -->
-<script src="https://www.jsdelivr.com/package/npm/chartjs-plugin-doughnutlabel-rebourne"></script>
+@* <script src="https://www.jsdelivr.com/package/npm/chartjs-plugin-doughnutlabel-rebourne"></script> *@
 
 
 
