--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="~/Fuji_I.styles.css" asp-append-version="true" /> *@
     <link href="~/css/fujistyle.css" rel="stylesheet" />
     
-    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    @* <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" /> *@
+	<link href="~/lib/bootstrap/dist/css/lineicons.css" rel="stylesheet" />
+	<link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    @* <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" /> *@
 
 </head>
 <body>
@@ -167,8 +169,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
      @* <script src="~/js/site.js" asp-append-version="true"></script> *@
     <script src="~/js/scriptfuji.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+	<script src="~/lib/jquery/dist/chart.js"></script>
+    @* <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> *@
+    @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> *@
     <script>
         sessionStorage.clear(); // Clears all items in sessionStorage
     </script>
