Hide Unwanted Pages

--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -138,9 +138,9 @@
                      <div class="col-lg-6" style="padding-left:10%;">
                                 <h2><u>Shift Report</u></h2>
                       </div>
-                      <div class="col-lg-2" style="text-align:right;">
+                     @*  <div class="col-lg-2" style="text-align:right;">
                             <a href="/Login/Login"><b>Log Out</b></a>
-                      </div>
+                      </div> *@
                 
                
             </div>
