Html changes in shift report

--- a/Fuji-I/wwwroot/css/style.css
+++ b/Fuji-I/wwwroot/css/style.css
@@ -206,4 +206,10 @@ textarea {
     .form-03-main {
         width: 100%;
     }
+
+}
+@media (min-width: 1400px) {
+    .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+        max-width: 2000px;
+    }
 }
