--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -128,7 +128,7 @@
                 </a>
             </div>
         </aside>
-        <div class="main p-3">
+        <div class="main p-3" style="margin-left:-11%;">
          <div class="container">
             <div class="row">
                 
